--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,7 +1,52 @@
 <h2>Template: <small>Dinámicos</small></h2>
 <hr>
-<form>
-    <div>
+<form #miFormulario="ngForm">
+    <div class=" mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class=" col-sm-9">
+            <input required [ngModel]="persona.nombre" name="nombre" class="form-control" placeholder="Nombre de la persona">
+            <span class="form-text text-danger" *ngIf="miFormulario.controls['nombre']?.errors">
+                Este campo es obligatorio
+            </span>
+
+        </div>
+    </div>
+
+    <div class=" mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+
+            <div class=" input-group">
+                <input class="form-control" placeholder="Agregar favorito" [(ngModel)]="nuevoJuego" (keyup.enter)="agregarJuego()" name="nuevoJuego">
+                <button class=" btn btn-outline-primary" (click)="agregarJuego()" type="button">Agregar</button>
+            </div>
         
+
+        </div>
+    </div>
+
+    <div class=" mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class=" col-sm-9">
+
+            <div class="input-group mb-1" *ngFor="let juego of persona.favoritos; let i = index" >
+                <input class="form-control " name="juego_{{i}}" [(ngModel)]="juego.nombre" required >
+
+                <button class="btn btn-outline-danger" (click)="eliminar(i)" type="button">Eliminar </button>
+
+            </div>
+            
+            
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <button type="button" [disabled]="miFormulario.invalid" class="btn btn-primary float-end" (click)="guardar()">Guardar</button>
+        </div>
     </div>
 </form>
+
+<span>Persona</span>
+<pre>{{persona | json}}</pre>
