--- a/src/app/template/switches/switches.component.html
+++ b/src/app/template/switches/switches.component.html
@@ -1,1 +1,97 @@
-<p>switches works!</p>
+<h2>Template: Switches</h2>
+<hr />
+
+<form #miForm="ngForm">
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Género</label>
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="radioGenero"
+          id="radioMasculino" 
+          [(ngModel)]="persona.genero"
+          value="M"
+          required
+        />
+        <label class="form-check-label" for="radioMasculino"> Masculino </label>
+      </div>
+
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="radioGenero"
+          id="radioFemenino"
+          [(ngModel)]="persona.genero"
+          value="F"
+          required
+        />
+        <label class="form-check-label" for="radioFemenino"> Femenino </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Notificaciones</label>
+    <div class="col-sm-9 mt-2">
+      <div class="form-check form-switch">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="flexSwitchCheckChecked"
+          name="notificaciones"
+          [(ngModel)]="persona.notificaciones"
+        />
+        <label class="form-check-label" for="flexSwitchCheckChecked"
+          >Recibir notificaciones</label
+        >
+      </div>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label"></label>
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          name="terminos"
+          [(ngModel)]="terminos"
+          id="flexCheckDefault"
+          required
+        />
+        <label class="form-check-label" for="flexCheckDefault">
+            Términos y condiciones
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+        <button class="btn btn-primary float-end" [disabled]="miForm.invalid">Guardar</button>
+    </div>
+  </div>
+
+
+</form>
+
+<h5>Valor del formulario</h5>
+<pre>{{miForm.value | json}}</pre>
+<br>
+<h5>Persona</h5>
+<pre>{{persona | json}}</pre>
+<br>
+
+<h5>Valid</h5>
+<pre>{{miForm.valid}}</pre>
+
+<h5>Términos</h5>
+<pre>{{miForm.controls['terminos'].errors | json}}</pre>
+
+<br>
+<pre>Condiciones: </pre>
+
