--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,88 @@
-<p>basicos works!</p>
+<h2>Reactive: Básicos</h2>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <form autocomplete="off" (ngSubmit)="guardar()" [formGroup]="miForm" >
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Producto</label>
+
+        <div class="col-sm-9">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Nombre del producto"
+            formControlName="titulo"
+
+          />
+
+          <span *ngIf="campoValid('titulo')" class="form-text text-danger"> Debe de ser de 3 letras </span>
+        </div>
+      </div>
+
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Precio</label>
+        <div class="col-sm-9">
+          <input
+            type="number"
+            class="form-control"
+            name="precio"
+            placeholder="Precio del producto"
+            formControlName="precio"
+          />
+          <span *ngIf="campoValid('precio')" class="form-text text-danger"> Debe de ser mayor a 0 </span>
+        </div>
+      </div>
+
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Existencias</label>
+        <div class="col-sm-9">
+          <input
+          type="number"
+          class="form-control"
+          formControlName="existencias"
+          placeholder="Existencias del producto"
+          />
+          <span *ngIf="campoValid('existencias')" class="form-text text-danger"> Deben  ser mayores a 0 </span>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <button
+            type="submit"
+            class="btn btn-success float-end"
+            
+          >
+            Guardar
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <span> Valid </span>
+    <pre>{{ miForm.valid }}</pre>
+
+    <span>
+      Pristine
+      <!-- el formulario y sus valores no se tocaron -->
+</span>
+    <pre>{{ miForm.pristine }}</pre>
+
+    <span>
+      Touched
+      <!-- los valores se tocaron -->
+   </span>
+    <pre>{{ miForm.touched }}</pre>
+
+  <span> Value </span>
+    <pre>{{ miForm.value | json }}</pre>
+
+    <span> Precio </span>
+    <pre>{{ miForm.controls["precio"].errors | json }}</pre>
+  </div>
+</div> 
