--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,71 @@
-<p>dinamicos works!</p>
+<h2>Reactive: <small>Dinámicos</small></h2>
+<hr />
+<form [formGroup]="miForm">
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input class="form-control" formControlName="nombre" placeholder="Nombre de la persona" />
+      <span *ngIf="campoValid('nombre', 'required')" class="form-text text-danger"> Este campo es obligatorio </span>
+      <span *ngIf="campoValid('nombre', 'minlength')" class="form-text text-danger"> El nombre debe ser mayor a 3 caracteres </span>
+      
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input
+          class="form-control"
+          placeholder="Agregar favorito"
+       
+        
+        />
+        <button
+          class="btn btn-outline-primary"
+          type="button"
+        >
+          Agregar
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9">
+      <div
+        class="input-group mb-1"
+        *ngFor="let juego of persona.favoritos; let i = index"
+      >
+        <input
+          class="form-control"
+
+        />
+
+        <button
+          class="btn btn-outline-danger"
+          
+          type="button"
+        >
+          Eliminar
+        </button>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button
+        type="submit"
+        class="btn btn-primary float-end"
+        (click)="guardar()"
+      >
+        Guardar
+      </button>
+    </div>
+  </div>
+</form>
+
+<!-- <span>Persona</span>
+<pre>{{ persona | json }}</pre> -->
