--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -18,12 +18,14 @@
         <input
           class="form-control"
           placeholder="Agregar favorito"
-       
+          [formControl]="nuevoFavorito"
+          (keyup.enter)="agregarFavorito()"
         
         />
         <button
           class="btn btn-outline-primary"
           type="button"
+          (click)="agregarFavorito()"
         >
           Agregar
         </button>
@@ -31,28 +33,28 @@
     </div>
   </div>
 
-  <!-- <div class="mb-3 row">
+  <div class="mb-3 row">
     <label class="col-sm-3 col-form-label">Favoritos</label>
-    <div class="col-sm-9">
+    <div class="col-sm-9" formArrayName="favoritos">
       <div
-        class="input-group mb-1"
-        *ngFor="let juego of persona.favoritos; let i = index"
-      >
+        class="input-group mb-1"  
+          *ngFor="let favorito of  favoritosArr.controls; let i = index "  >
         <input
           class="form-control"
-
+          [formControlName]="i"
         />
 
         <button
           class="btn btn-outline-danger"
           
           type="button"
+          (click)="borrar(i)"
         >
           Eliminar
         </button>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <div class="row">
     <div class="col-sm-12">
@@ -66,6 +68,19 @@
     </div>
   </div>
 </form>
+
+<span>Valid</span>
+<pre>{{ miForm.valid }}</pre>
+<br>
+
+<span>Valid</span>
+<pre>{{ miForm.value | json }}</pre>
+<br>
+
+<span>Agregar juego</span>
+<pre>{{ nuevoFavorito.valid }}</pre>
+<pre>{{ nuevoFavorito.value }}</pre>
+
 
 <!-- <span>Persona</span>
 <pre>{{ persona | json }}</pre> -->
