--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,7 +1,7 @@
 <h2>Reactive: Switches</h2>
 <hr />
 
-<form >
+<form [formGroup]="miForm" (ngSubmit)="guardar()" >
   <div class="row mb-3">
     <label class="col-sm-3 col-form-label">Género</label>
     <div class="col-sm-9">
@@ -9,9 +9,9 @@
         <input
           class="form-check-input"
           type="radio"
-          name="radioGenero"
+      
           id="radioMasculino" 
-         
+          formControlName="genero"
           value="M"
          
         />
@@ -22,9 +22,9 @@
         <input
           class="form-check-input"
           type="radio"
-          name="radioGenero"
+
           id="radioFemenino"
-   
+          formControlName="genero"
           value="F"
        
         />
@@ -41,6 +41,7 @@
           class="form-check-input"
           type="checkbox"
           id="flexSwitchCheckChecked"
+          formControlName="notificaciones"
         
         />
         <label class="form-check-label" for="flexSwitchCheckChecked"
@@ -57,8 +58,7 @@
         <input
           class="form-check-input"
           type="checkbox"
-      
-       
+          formControlName="terminos"         
           id="flexCheckDefault"
       
         />
@@ -71,14 +71,14 @@
 
   <div class="row">
     <div class="col">
-        <button class="btn btn-primary float-end">Guardar</button>
+        <button class="btn btn-primary float-end" type="submit">Guardar</button>
     </div>
   </div>
 
 
 </form>
 
-<!-- <h5>Valor del formulario</h5>
+<h5>Valor del formulario</h5>
 <pre>{{miForm.value | json}}</pre>
 <br>
 <h5>Persona</h5>
@@ -88,7 +88,7 @@
 <h5>Valid</h5>
 <pre>{{miForm.valid}}</pre>
 
-<h5>Términos</h5>
+<!-- <h5>Términos</h5>
 <pre>{{miForm.controls['terminos'].errors | json}}</pre>
 
 <br>
