--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -12,3 +12,9 @@
 <ul class="list-group">
     <li class="list-group-item" [routerLink]="[item.ruta]" routerLinkActive="active" *ngFor="let item of reactiveMenu" >{{item.texto}}</li>
 </ul>
+
+<h2 class=" mt-3">Validaciones</h2>
+<hr>
+<ul class="list-group">
+    <li class="list-group-item" [routerLink]="[item.ruta]" routerLinkActive="active" *ngFor="let item of authMenu" >{{item.texto}}</li>
+</ul>
